[project]
name = "docbook-convert-stuff"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Noam Yorav-Raphael", email = "noam.yoravraphael@mobileye.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
normalize_html = "normalize_html:main"
#hello = "docbook-convert-stuff:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docbook_convert_stuff", "normalize_html.py"]
